2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* doc/Todo.html: Updated.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditHost.aspx:
	* EditHost.aspx.cs: Add support for disabling hosts.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.js:
	* EditLane.aspx:
	* EditHosts.aspx:
	* EditLane.aspx.cs:
	* App_Code/Utils.cs:
	* EditHosts.aspx.cs: Add support for deletion directives.

2009-04-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.js:
	* EditLane.aspx.cs: Add a dependency_host_id to lane
	  dependencies, to specify the host the lane must have
	  succeeded on.

2009-04-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLaneFile.aspx: Added BUILD_SCRIPT_DIR.

2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.js:
	* EditLane.aspx.cs:
	* EditLaneFile.aspx:
	* GetDependentFile.aspx:
	* GetDependentFile.aspx.cs: Add support for downloading
	  dependencies to a directory on the buildbot when the bot
	  starts working on a new revision.

2009-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLaneFile.aspx: Add support for BUILD_REPOSITORY_#.

	* index.aspx.cs:
	* GetDependentFile.aspx:
	* GetDependentFile.aspx.cs: Complete support for lane
	  dependencies matching exact revision.

2009-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.aspx: Add more explicit comments.

	* EditLane.js:
	* EditLane.aspx.cs: Implement dependency deletion.

2009-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Check the compressed mime type of
	  the file we're actually serving.

2009-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.aspx.cs: Allow for editing the command timeout, and
	  set a default value of 60 minutes. Also add the ability to
	  edit a file by clicking on the step too.

2009-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLaneFile.aspx.cs: Add some simple change tracking to
	  steps.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>
