@@ -1,0 +1,7 @@
+﻿<%@ Page Language="C#" AutoEventWireup="true" CodeFile="ViewLaneFileHistory.aspx.cs" Inherits="ViewLaneFileHistory"  MasterPageFile="~/Master.master" EnableViewState="false" %>
+
+<asp:Content ID="Content2" ContentPlaceHolderID="content" runat="Server">
+    <div>
+        <asp:Table ID="tblFiles" runat="server" />
+    </div>
+</asp:Content>
