@@ -1,5 +1,10 @@
 2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* ViewLaneFileHistory.aspx:
+	* ViewLaneFileHistory.aspx.cs: Added.
+
+2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* doc/Todo.html: Updated.
 
 2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>
